--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
     <!-- inizio header  -->
     <header>
+        <div>
+            <img id="logo"src="img/logo.svg" alt="logo The Booleaner">
+        </div>
 
     </header>
     <!-- fine header  -->
