--- a/index.html
+++ b/index.html
@@ -11,13 +11,27 @@
     <!-- inizio header  -->
     <header>
         <div>
-            <img id="logo"src="img/logo.svg" alt="logo The Booleaner">
+            <img id="logo"src="css/img/logo.svg" alt="logo The Booleaner">
         </div>
 
     </header>
     <!-- fine header  -->
     <!-- inizio main  -->
     <main>
+        <!-- Inizio Titolo  -->
+        <section>
+            <h1>
+                Internet deve essere al servizio del "bene pubblico": 
+                il manifesto di Tim Berners-Lee
+            </h1>
+            <h4>Scritto da The Booleaner</h4>
+
+
+        </section>
+        <!-- fine Titolo  -->
+        <section>
+
+        </section>
 
     </main>
     <!-- fine main  -->
