--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- inizio header  -->
     <header>
         <div>
-            <img id="logo"src="css/img/logo.svg" alt="logo The Booleaner">
+            <img id="logo"src="img/logo.svg" alt="logo The Booleaner">
         </div>
 
     </header>
