--- a/index.html
+++ b/index.html
@@ -24,10 +24,22 @@
                 Internet deve essere al servizio del "bene pubblico": 
                 il manifesto di Tim Berners-Lee
             </h1>
-            <h4>Scritto da The Booleaner</h4>
+            <p>
+                Scritto da<span id="firma">The Booleaner</span> <br>il 10/10/2020
 
+            </p>
+        </section>
+        <!-- fine Titolo  -->
+        <!-- inizio immagini header  -->
+        <section>
+            <img src="img/tim-1.jpg" alt="Foto Tim conferenza">
+            <img src="img/tim-2.jpg" alt="Foto Tim Berners-Lee">
+            <p id="descrizione-foto">1 st Photo:John S. and James L. Knight Foundation, by Scott Henrichsen <br>
+               2nd Photo: Wikimedia, by Paul Clarke
+            </p>
 
         </section>
+        <!-- fine immagini header  -->
         <!-- fine Titolo  -->
         <section>
 
