--- a/index.html
+++ b/index.html
@@ -41,9 +41,66 @@
         </section>
         <!-- fine immagini header  -->
         <!-- fine Titolo  -->
+        <!-- inizio paragrafo  -->
         <section>
+            <P>Lorem ipsum dolor sit, <mark>amet consectetur adipisicing elit.</mark>  Quas a natus sunt adipisci unde veritatis officiis deserunt, earum, facilis aliquid harum quis enim, fugit quo! Labore amet possimus facere sunt?</P>
+
 
         </section>
+        <!-- fine paragrafo  -->
+        <!-- inizio unorderlist  -->
+        <section>
+            <ul>
+                <li>Lorem ipsum dolor sit, amet consectetur</li>
+                <li>Lorem ipsum dolor sit, amet consectetur</li>
+                <li>Lorem ipsum dolor sit, amet consectetur</li>
+            </ul>
+        </section>
+        <!-- fine unorderlist  -->
+        <!-- inizio tabella -->
+        <section>
+            <table>
+                <thead>
+                    <tr>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, illo? Sapiente voluptate error totam repudiandae fuga saepe dicta, architecto omnis quibusdam veniam sed a nostrum non sunt. Odio, ipsam repellat!</td>
+
+                    </tr>
+                    <tr>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, illo? Sapiente voluptate error totam repudiandae fuga saepe dicta, architecto omnis quibusdam veniam sed a nostrum non sunt. Odio, ipsam repellat!</td>
+
+                    </tr>
+                    <tr>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, illo? Sapiente voluptate error totam repudiandae fuga saepe dicta, architecto omnis quibusdam veniam sed a nostrum non sunt. Odio, ipsam repellat!</td>
+
+                    </tr>
+
+                </tbody>
+            </table>
+
+
+        </section>
+        <!-- fine tabella  -->
+        <!-- inizio paragrafo 2 -->
+        <section>
+            <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas a natus sunt adipisci unde veritatis officiis deserunt, earum, facilis aliquid harum quis enim, fugit quo! Labore amet possimus facere sunt?</P>
+
+
+        </section>
+        <!-- fine paragrafo 2 -->
 
     </main>
     <!-- fine main  -->
