--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
+                    <tr class="row-color">
                         <td>Lorem ipsum dolor</td>
                         <td>Lorem ipsum dolor</td>
                         <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, illo? Sapiente voluptate error totam repudiandae fuga saepe dicta, architecto omnis quibusdam veniam sed a nostrum non sunt. Odio, ipsam repellat!</td>
@@ -81,7 +81,7 @@
                         <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, illo? Sapiente voluptate error totam repudiandae fuga saepe dicta, architecto omnis quibusdam veniam sed a nostrum non sunt. Odio, ipsam repellat!</td>
 
                     </tr>
-                    <tr>
+                    <tr class="row-color">
                         <td>Lorem ipsum dolor</td>
                         <td>Lorem ipsum dolor</td>
                         <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, illo? Sapiente voluptate error totam repudiandae fuga saepe dicta, architecto omnis quibusdam veniam sed a nostrum non sunt. Odio, ipsam repellat!</td>
@@ -96,7 +96,7 @@
         <!-- fine tabella  -->
         <!-- inizio paragrafo 2 -->
         <section>
-            <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas a natus sunt adipisci unde veritatis officiis deserunt, earum, facilis aliquid harum quis enim, fugit quo! Labore amet possimus facere sunt?</P>
+            <P>Lorem ipsum dolor sit, amet consectr adipisicing elit. Quas a natusetu sunt adipisci <mark>r adipisicing elit. Quas a natus</mark> veritatis officiis deserunt, earum, facilis aliquid harum quis enim, fugit quo! Labore amet possimus facere sunt?</P>
 
 
         </section>
