Fine footer -fine esercizio

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- inizio header  -->
     <header>
-        <div>
+        <div id="sfondo">
             <img id="logo"src="img/logo.svg" alt="logo The Booleaner">
         </div>
 
@@ -106,6 +106,15 @@
     <!-- fine main  -->
     <!-- inizio footer  -->
     <footer>
+        <section>
+            <p id="gray"> Potrebbero interessarti</p>
+            <div >
+                <img  src="img/monitor.jpg" alt="">
+            </div>
+            <div>
+                <img src="img/graph.jpg" alt="">
+            </div>
+        </section>
 
     </footer>
     <!-- fine footer  -->
