--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- inizio header  -->
     <header>
         <div id="sfondo">
-            <img id="logo"src="img/logo.svg" alt="logo The Booleaner">
+            <img id="logo" src="img/logo.svg" alt="logo The Booleaner">
         </div>
 
     </header>
@@ -109,10 +109,10 @@
         <section>
             <p id="gray"> Potrebbero interessarti</p>
             <div >
-                <img  src="img/monitor.jpg" alt="">
+                <h3 id="immagine1">Lorem ipsum dolor</h3>
             </div>
             <div>
-                <img src="img/graph.jpg" alt="">
+                <h3 id="immagine2">Lorem ipsum dolor</h3>
             </div>
         </section>
 
